edit header tittle

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fylo Dark | Frontmentor.io</title>
+    <title>Fylo Dark | Frontendmentor.io</title>
 
     <link rel="icon" href="./assets/images/favicon-32x32.png" type="image/gif" sizes="16x16">
     <script src="https://kit.fontawesome.com/143c787ae0.js" crossorigin="anonymous"></script>
